# libnest2d

./: .gitlab-ci.yml  CMakeLists.txt  README.md  binpack2d.cpp  binpack2d.h  binpack2d.hpp  boost_alg.hpp  common.hpp  config.hpp  geometries.hpp  geometries_io.hpp  geometry_traits.hpp  libnest2d.h  printer_parts.h
.github/workflows/: cmake.yml
GTest/: test.cpp
binpack2d/: binpack2d.cpp  binpack2d.hpp  boost_alg.hpp  common.hpp  geometries_io.hpp  geometries_nfp.hpp  geometry_traits.hpp
binpack2d/clipper_backend/: CMakeLists.txt  clipper_backend.cpp  clipper_backend.hpp
binpack2d/placers/: bottomleft.hpp  bottomleftplacer.hpp  centering.hpp  geometries_nofitpolygon.hpp  nfpplacer.hpp  placer_boilerplate.hpp
binpack2d/selections/: djd_heuristic.hpp  filler.hpp  firstfit.hpp  selection_boilerplate.hpp
clipper_backend/: CMakeLists.txt  clipper_backend.cpp  clipper_backend.hpp
cmake_modules/: Config.cmake.in  DownloadProject.CMakeLists.cmake.in  DownloadProject.cmake  FindClipper.cmake  FindGMP.cmake  FindNLopt.cmake  FindTBB.cmake  RequirePackage.cmake  threading_omp.cmake  threading_std.cmake  threading_tbb.cmake
examples/: CMakeLists.txt  libnfpglue.hpp  main.cpp
include/: libnest2d.h
include/libnest2d/: common.hpp  geometry_traits.hpp  geometry_traits_nfp.hpp  libnest2d.hpp  nester.hpp  optimizer.hpp  parallel.hpp
include/libnest2d/backends/clipper/: CMakeLists.txt  clipper_polygon.hpp  geometries.hpp
include/libnest2d/optimizers/nlopt/: CMakeLists.txt  nlopt_boilerplate.hpp
include/libnest2d/optimizers/optimlib/: CMakeLists.txt  particleswarm.hpp
include/libnest2d/placers/: nfpplacer.hpp  placer_boilerplate.hpp
include/libnest2d/selections/: firstfit.hpp
include/libnest2d/utils/: bigint.hpp  boost_alg.hpp  measure.hpp  rational.hpp  rotcalipers.hpp
libnest2d/: boost_alg.hpp  common.hpp  geometries_nfp.hpp  geometry_traits.hpp  geometry_traits_nfp.hpp  libnest2d.hpp  metaloop.hpp  optimizer.hpp
libnest2d/clipper_backend/: CMakeLists.txt  clipper_backend.cpp  clipper_backend.hpp
libnest2d/optimizers/: genetic.hpp  nlopt_boilerplate.hpp  simplex.hpp
libnest2d/placers/: nfpplacer.hpp  placer_boilerplate.hpp
libnest2d/selections/: djd_heuristic.hpp  filler.hpp  firstfit.hpp
libnfp/: CMakeLists.txt  libnfp.hpp
src/: libnest2d.cpp
tests/: CMakeLists.txt  main.cpp  printer_parts.cpp  printer_parts.h  svgtools.hpp  test.cpp
tools/: Int128.hpp  libnfpglue.cpp  libnfpglue.hpp  libnfporb.hpp  measure.hpp  nfp_svgnest.hpp  nfp_svgnest_glue.hpp  printer_parts.hpp  svgtools.hpp
tools/libnfporb/: libnfporb.hpp
